--- a/pom.xml
+++ b/pom.xml
@@ -17,15 +17,15 @@
 
     <groupId>org.wso2.identity.webhook.event.handlers</groupId>
     <modelVersion>4.0.0</modelVersion>
-    <version>1.0.219</version>
+    <version>1.0.1-SNAPSHOT</version>
     <artifactId>identity-webhook-event-handlers</artifactId>
     <packaging>pom</packaging>
     <name>Identity Webhook Event Handlers</name>
 
     <scm>
-        <url>https://github.com/Sachin-Mamoru/wso2-event-hook-handler.git</url>
-        <developerConnection>scm:git:https://github.com/Sachin-Mamoru/wso2-event-hook-handler.git</developerConnection>
-        <connection>scm:git:https://github.com/Sachin-Mamoru/wso2-event-hook-handler.git</connection>
+        <url>https://github.com/wso2-extensions/identity-webhook-event-handlers.git</url>
+        <developerConnection>scm:git:https://github.com/wso2-extensions/identity-webhook-event-handlers.git</developerConnection>
+        <connection>scm:git:https://github.com/wso2-extensions/identity-webhook-event-handlers.git</connection>
         <tag>HEAD</tag>
     </scm>
 
