--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,11 @@
                 <artifactId>com.wso2.identity.asgardeo.config.mapper</artifactId>
                 <version>${com.wso2.identity.asgardeo.extensions.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.wso2.identity.event.publishers</groupId>
+                <artifactId>org.wso2.identity.event.common.publisher</artifactId>
+                <version>${org.wso2.identity.event.publishers.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.googlecode.json-simple.wso2</groupId>
                 <artifactId>json-simple</artifactId>
@@ -188,14 +192,21 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.wso2.identity.event.publishers</groupId>
-                <artifactId>org.wso2.identity.event.common.publisher</artifactId>
-                <version>${org.wso2.identity.event.publishers.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.wso2.carbon.identity.inbound.provisioning.scim2</groupId>
                 <artifactId>org.wso2.carbon.identity.scim2.common</artifactId>
                 <version>${org.wso2.carbon.identity.inbound.provisioning.scim2.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j-core.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-to-slf4j</artifactId>
+                <version>${log4j-to-slf4j.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -401,6 +412,8 @@
         <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
         <os-maven-plugin.version>1.6.2</os-maven-plugin.version>
         <mockito.version>3.8.0</mockito.version>
+        <log4j-core.version>2.17.1</log4j-core.version>
+        <log4j-to-slf4j.version>2.8.2</log4j-to-slf4j.version>
 
         <!-- Spotbugs versions -->
         <spotbugs-maven-plugin.version>4.1.3</spotbugs-maven-plugin.version>
