--- a/components/org.wso2.identity.webhook.common.event.handler/pom.xml
+++ b/components/org.wso2.identity.webhook.common.event.handler/pom.xml
@@ -170,11 +170,7 @@
                             org.json.simple; version="${com.googlecode.json-simple.wso2.version.range}",
                             org.json.simple.parser; version="${com.googlecode.json-simple.wso2.version.range}",
                             javax.servlet.http; version="${imp.pkg.version.javax.servlet}",
-                            org.wso2.identity.event.common.publisher;
-                            version="${org.wso2.identity.event.publishers.version.range}",
-                            org.wso2.identity.event.common.publisher.model;
-                            version="${org.wso2.identity.event.publishers.version.range}",
-                            org.wso2.identity.event.common.publisher.exception;
+                            org.wso2.identity.event.common.publisher.*;
                             version="${org.wso2.identity.event.publishers.version.range}"
                         </Import-Package>
                     </instructions>
