--- a/pom.xml
+++ b/pom.xml
@@ -499,7 +499,7 @@
         <imp.pkg.version.javax.servlet>[2.6.0, 3.0.0)</imp.pkg.version.javax.servlet>
 
         <!--Web Sub Hub Adapter dependency versions-->
-        <org.wso2.identity.event.publishers.version>1.0.8-SNAPSHOT</org.wso2.identity.event.publishers.version>
+        <org.wso2.identity.event.publishers.version>1.0.8</org.wso2.identity.event.publishers.version>
         <org.wso2.identity.event.publishers.version.range>[1.0.0,2.0.0)
         </org.wso2.identity.event.publishers.version.range>
 
