--- a/components/org.wso2.identity.webhook.common.event.handler/pom.xml
+++ b/components/org.wso2.identity.webhook.common.event.handler/pom.xml
@@ -210,6 +210,7 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <workingDirectory>${project.basedir}/src/test/resources</workingDirectory>
                 </configuration>
             </plugin>
         </plugins>
