--- a/components/org.wso2.identity.webhook.common.event.handler/pom.xml
+++ b/components/org.wso2.identity.webhook.common.event.handler/pom.xml
@@ -177,8 +177,9 @@
                             org.json.simple; version="${com.googlecode.json-simple.wso2.version.range}",
                             org.json.simple.parser; version="${com.googlecode.json-simple.wso2.version.range}",
                             javax.servlet.http; version="${imp.pkg.version.javax.servlet}",
-                            org.wso2.carbon.identity.application.mgt.*; version="${carbon.identity.framework.imp.pkg.version.range}"
-                            org.wso2.carbon.identity.event.publisher.api.*; version="${carbon.identity.framework.imp.pkg.version.range}"
+                            org.wso2.carbon.identity.application.mgt.*; version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.event.publisher.api.*; version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.slf4j; version="${org.slf4j.imp.pkg.version.range}"
                         </Import-Package>
                     </instructions>
                 </configuration>
