--- a/components/org.wso2.identity.webhook.common.event.handler/pom.xml
+++ b/components/org.wso2.identity.webhook.common.event.handler/pom.xml
@@ -176,6 +176,7 @@
                             org.wso2.carbon.user.core.common; version="${carbon.kernel.package.import.version.range}",
                             org.wso2.carbon.identity.core.*;
                             version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.context; version="${carbon.kernel.package.import.version.range}",
                             org.wso2.carbon.identity.data.publisher.authentication.analytics.login.*;
                             version="${identity.datapublisher.authentication.version.range}",
                             org.json.simple; version="${com.googlecode.json-simple.wso2.version.range}",
