Update sync PR title and body format for clarity

--- a/.github/workflows/sync-master-to-next.yml
+++ b/.github/workflows/sync-master-to-next.yml
@@ -68,8 +68,8 @@ jobs:
           gh pr create \
             --base "${{ env.TARGET_BRANCH }}" \
             --head "$SYNC_BRANCH" \
-            --title "[Sync][\`${{ env.TARGET_BRANCH }}\` -> \`master\`][#${{ github.event.pull_request.number }}]: ${{ github.event.pull_request.title }}" \
-            --body "🤖 **Auto-sync from master**
+            --title "[Sync][\`${{ env.TARGET_BRANCH }}\` <- \`${{ github.event.pull_request.base.ref }}\`][#${{ github.event.pull_request.number }}]: ${{ github.event.pull_request.title }}" \
+            --body "🤖 **Auto-sync from ${{ github.event.pull_request.base.ref }}**
           This PR automatically syncs the changes from #${{ github.event.pull_request.number }} to the \`${{ env.TARGET_BRANCH }}\` branch.
           
           **Original PR:** ${{ github.event.pull_request.html_url }}
